--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Hangman game">
-        <title>Hangman game</title>
+        <meta name="description" content="Memory game">
+        <title>Memory game</title>
         <style></style>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/css.css">
